# tkati

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
.claude/: settings.json
.devcontainer/dev/: devcontainer-lock.json  devcontainer.json  docker-compose.devcontainer.yml
.github/workflow-templates/: package.template.yml  publish.template.yml  test.template.yml
.github/workflows/: package-tkati-core.yml  publish-tkati-core.yml  publish-tkati-node-el.yml  test-k2ch.yml  test-tkati-core.yml  test-tkati-node-el.yml
docs/: 01-intro.md  02-configuration.md  03-jsonnet-api.md  04-1-compose.md  04-2-kubernetes.md  04-deployment.md  05-node-configuration.md  06-topics-serialization.md  07-node-sdk.md
examples/clicks/: Dockerfile  Makefile  pipeline.jsonnet
examples/clicks/env/: dev.jsonnet  prod.jsonnet
examples/clicks/infra/: .terraform.lock.hcl  main.tf.json  providers.tf
examples/clicks/pipelines/: clicks.py
