[project]
name = "tkati"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
tkati-core = { workspace = true }

[tool.pyright]
reportPrivateImportUsage = "none"

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]
