[project]
name = "tkati"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
tkati-core = { workspace = true }
tkati-node-el = { workspace = true }

[tool.pyright]
reportPrivateImportUsage = "none"

[[tool.mypy.overrides]]
module = ["pyarrow.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]
